[gd_scene load_steps=4 format=3 uid="uid://n02t34w6laxc"]

[ext_resource type="Script" uid="uid://dov2utvhughn0" path="res://assets/bullet/bullet.gd" id="1_igcox"]
[ext_resource type="Texture2D" uid="uid://btcohqey5ysk8" path="res://assets/Alan.png" id="2_40ah8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xh6aw"]

[node name="Bullet" type="RigidBody2D"]
contact_monitor = true
max_contacts_reported = 5
script = ExtResource("1_igcox")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xh6aw")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.13478765, 0.15960945)
texture = ExtResource("2_40ah8")

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 20.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_bullet_timer_timeout"]
